--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "API",
     "Tutorial"
   ],
-  "author": "olatunde garuba",
+  "author": "Josh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jvillama/TwitterRESTfulAPI/issues"
